vlib/v/checker/tests/cast_string_to_char_err.vv
fn main() {
	_ := char('a')
}
